{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1789,
  "lineage": "d8a8738f-49bf-7cf6-72fe-46708715ed10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "capp-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nacl-capp-app",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:network-acl/acl-078173f2897ec4b99",
            "egress": [],
            "id": "acl-078173f2897ec4b99",
            "ingress": [],
            "owner_id": "789382984861",
            "subnet_ids": [
              "subnet-0c525ad3b73e9c47c",
              "subnet-0fe80742f52c3503f"
            ],
            "tags": {
              "Name": "nacl-capp-app"
            },
            "tags_all": {
              "Name": "nacl-capp-app"
            },
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "nacl-capp-data",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:network-acl/acl-03acddcaf314c6f94",
            "egress": [],
            "id": "acl-03acddcaf314c6f94",
            "ingress": [],
            "owner_id": "789382984861",
            "subnet_ids": [
              "subnet-025696d9e849ea998",
              "subnet-02f53110aaf44c28a"
            ],
            "tags": {
              "Name": "nacl-capp-data"
            },
            "tags_all": {
              "Name": "nacl-capp-data"
            },
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "nacl-capp-web",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:network-acl/acl-055211b4484931d92",
            "egress": [],
            "id": "acl-055211b4484931d92",
            "ingress": [],
            "owner_id": "789382984861",
            "subnet_ids": [
              "subnet-01b9571febab4e27f",
              "subnet-062a7600e4201a0e8"
            ],
            "tags": {
              "Name": "nacl-capp-web"
            },
            "tags_all": {
              "Name": "nacl-capp-web"
            },
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "capp-nacl-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "11",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2197214226",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-078173f2897ec4b99",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.capp-nacl",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "12",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2312339737",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-078173f2897ec4b99",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 600,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.capp-nacl",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "13",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/27",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3144314781",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03acddcaf314c6f94",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.capp-nacl",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "14",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/27",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3355137747",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03acddcaf314c6f94",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.capp-nacl",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "15",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.32/27",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1464987906",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03acddcaf314c6f94",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.capp-nacl",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "16",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.32/27",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-793681040",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03acddcaf314c6f94",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 400,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.capp-nacl",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-694480908",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-055211b4484931d92",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.capp-nacl",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "6",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3402286646",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-055211b4484931d92",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 600,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.capp-nacl",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capp-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "capp-app-route",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:route-table/rtb-03c3311d0ca38e7e5",
            "id": "rtb-03c3311d0ca38e7e5",
            "owner_id": "789382984861",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "capp-app-route"
            },
            "tags_all": {
              "Name": "capp-app-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-data-route",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:route-table/rtb-0cf7536351a283cd2",
            "id": "rtb-0cf7536351a283cd2",
            "owner_id": "789382984861",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "capp-data-route"
            },
            "tags_all": {
              "Name": "capp-data-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-web-route",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:route-table/rtb-0ccc578c780e9398e",
            "id": "rtb-0ccc578c780e9398e",
            "owner_id": "789382984861",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "capp-web-route"
            },
            "tags_all": {
              "Name": "capp-web-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "capp-routetable-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "capp-app-route:capp-app-subnet-01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045d00f41c53fc370",
            "route_table_id": "rtb-03c3311d0ca38e7e5",
            "subnet_id": "subnet-0fe80742f52c3503f"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-app-route:capp-app-subnet-02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f9f8722eee7d44d",
            "route_table_id": "rtb-03c3311d0ca38e7e5",
            "subnet_id": "subnet-0c525ad3b73e9c47c"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-data-route:capp-data-subnet-01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e32c636ecaeb4385",
            "route_table_id": "rtb-0cf7536351a283cd2",
            "subnet_id": "subnet-02f53110aaf44c28a"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-data-route:capp-data-subnet-02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b98b93003c21cf4",
            "route_table_id": "rtb-0cf7536351a283cd2",
            "subnet_id": "subnet-025696d9e849ea998"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-web-route:capp-web-subnet-01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8bf29494c59bf1d",
            "route_table_id": "rtb-0ccc578c780e9398e",
            "subnet_id": "subnet-01b9571febab4e27f"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-web-route:capp-web-subnet-02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009a059a01990d905",
            "route_table_id": "rtb-0ccc578c780e9398e",
            "subnet_id": "subnet-062a7600e4201a0e8"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "capp-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sgrp-capp-bhost",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:security-group/sg-036ff3126d4c1b596",
            "description": "security gruop for bhost",
            "egress": [],
            "id": "sg-036ff3126d4c1b596",
            "ingress": [],
            "name": "sgrp-capp-bhost",
            "name_prefix": "",
            "owner_id": "789382984861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgrp-capp-bhost"
            },
            "tags_all": {
              "Name": "sgrp-capp-bhost"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "sgrp-capp-db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:security-group/sg-0752288b9b4716223",
            "description": "security group for database",
            "egress": [],
            "id": "sg-0752288b9b4716223",
            "ingress": [],
            "name": "sgrp-capp-db",
            "name_prefix": "",
            "owner_id": "789382984861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgrp-capp-db"
            },
            "tags_all": {
              "Name": "sgrp-capp-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "sgrp-capp-ssm-vpce",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:security-group/sg-01fc97a7482fded03",
            "description": "security group for ssm-vpce",
            "egress": [],
            "id": "sg-01fc97a7482fded03",
            "ingress": [],
            "name": "sgrp-capp-ssm-vpce",
            "name_prefix": "",
            "owner_id": "789382984861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgrp-capp-ssm-vpce"
            },
            "tags_all": {
              "Name": "sgrp-capp-ssm-vpce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "capp-security-group-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sgrp-capp-bhost-01",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow incoming https traffic from ssm-vpce",
            "from_port": 0,
            "id": "sgrule-2140366175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-036ff3126d4c1b596",
            "self": false,
            "source_security_group_id": "sg-01fc97a7482fded03",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.capp-security-group",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "sgrp-capp-bhost-02",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow incoming https traffic from ssm-vpce",
            "from_port": 0,
            "id": "sgrule-3739919321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-036ff3126d4c1b596",
            "self": false,
            "source_security_group_id": "sg-01fc97a7482fded03",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.capp-security-group",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "sgrp-capp-bhost-03",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow incoming https traffic from ssm-vpce",
            "from_port": 0,
            "id": "sgrule-1858725166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-6fa54006"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-036ff3126d4c1b596",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.capp-security-group",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "sgrp-capp-bhost-04",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow incoming https traffic from ssm-vpce",
            "from_port": 3306,
            "id": "sgrule-1893010050",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-036ff3126d4c1b596",
            "self": false,
            "source_security_group_id": "sg-0752288b9b4716223",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.capp-security-group",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "sgrp-capp-db-01",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/27"
            ],
            "description": "allow incoming traffic on 3306",
            "from_port": 3306,
            "id": "sgrule-2931264532",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0752288b9b4716223",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.capp-security-group",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "sgrp-capp-db-02",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.32/27"
            ],
            "description": "allow incoming traffic on 3306",
            "from_port": 3306,
            "id": "sgrule-2279098086",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0752288b9b4716223",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.capp-security-group",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "sgrp-capp-ssm-vpce-01",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow incoming https traffic from bhost",
            "from_port": 0,
            "id": "sgrule-4063370254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01fc97a7482fded03",
            "self": false,
            "source_security_group_id": "sg-036ff3126d4c1b596",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.capp-security-group",
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "sgrp-capp-ssm-vpce-02",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow incoming https traffic from bhost",
            "from_port": 0,
            "id": "sgrule-4197331945",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01fc97a7482fded03",
            "self": false,
            "source_security_group_id": "sg-036ff3126d4c1b596",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.capp-security-group",
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capp-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "capp-app-subnet-01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:subnet/subnet-0fe80742f52c3503f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe80742f52c3503f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789382984861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capp-app-subnet-01"
            },
            "tags_all": {
              "Name": "capp-app-subnet-01"
            },
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-app-subnet-02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:subnet/subnet-0c525ad3b73e9c47c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c525ad3b73e9c47c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789382984861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capp-app-subnet-02"
            },
            "tags_all": {
              "Name": "capp-app-subnet-02"
            },
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-data-subnet-01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:subnet/subnet-02f53110aaf44c28a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f53110aaf44c28a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789382984861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capp-data-subnet-01"
            },
            "tags_all": {
              "Name": "capp-data-subnet-01"
            },
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-data-subnet-02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:subnet/subnet-025696d9e849ea998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025696d9e849ea998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789382984861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capp-data-subnet-02"
            },
            "tags_all": {
              "Name": "capp-data-subnet-02"
            },
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-web-subnet-01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:subnet/subnet-01b9571febab4e27f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b9571febab4e27f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789382984861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capp-web-subnet-01"
            },
            "tags_all": {
              "Name": "capp-web-subnet-01"
            },
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        },
        {
          "index_key": "capp-web-subnet-02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:subnet/subnet-062a7600e4201a0e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062a7600e4201a0e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789382984861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capp-web-subnet-02"
            },
            "tags_all": {
              "Name": "capp-web-subnet-02"
            },
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "capp-vpc",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:vpc/vpc-0dd6877765d2dfdc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0ea607e8f05e3da7f",
            "default_route_table_id": "rtb-02700816afef360fc",
            "default_security_group_id": "sg-0487d8b8166e09d7a",
            "dhcp_options_id": "dopt-0e5ca227f2bddb692",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dd6877765d2dfdc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02700816afef360fc",
            "owner_id": "789382984861",
            "tags": {
              "Name": "capp-vpc"
            },
            "tags_all": {
              "Name": "capp-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.endpoints[\"s3-gatewayendpoint\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:vpc-endpoint/vpce-02ea35fb557034a22",
            "auto_accept": true,
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-02ea35fb557034a22",
            "owner_id": "789382984861",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ccc578c780e9398e"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_security_group.capp-security-group",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints[\"ssm-endpoint-01\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:vpc-endpoint/vpce-0ae311b334c66ce62",
            "auto_accept": true,
            "dns_entry": [
              {
                "dns_name": "vpce-0ae311b334c66ce62-lqv9txru.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0ae311b334c66ce62-lqv9txru-ap-southeast-1a.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssm.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z03124623SKHACKCXVET9"
              }
            ],
            "id": "vpce-0ae311b334c66ce62",
            "network_interface_ids": [
              "eni-09eefa7e5298a7865"
            ],
            "owner_id": "789382984861",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01fc97a7482fded03"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0fe80742f52c3503f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_security_group.capp-security-group",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints[\"ssm-endpoint-02\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:vpc-endpoint/vpce-0d3d1470360385d1e",
            "auto_accept": true,
            "dns_entry": [
              {
                "dns_name": "vpce-0d3d1470360385d1e-o70z4c95.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0d3d1470360385d1e-o70z4c95-ap-southeast-1a.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssmmessages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0312461OXKHTJB4Z0DI"
              }
            ],
            "id": "vpce-0d3d1470360385d1e",
            "network_interface_ids": [
              "eni-0ae336102ceaed527"
            ],
            "owner_id": "789382984861",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01fc97a7482fded03"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0fe80742f52c3503f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_security_group.capp-security-group",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints[\"ssm-endpoint-03\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:789382984861:vpc-endpoint/vpce-0546bd7fa8664e4ba",
            "auto_accept": true,
            "dns_entry": [
              {
                "dns_name": "vpce-0546bd7fa8664e4ba-3xikrep2.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0546bd7fa8664e4ba-3xikrep2-ap-southeast-1a.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ec2messages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z01297671HLOE9HPAYPGP"
              }
            ],
            "id": "vpce-0546bd7fa8664e4ba",
            "network_interface_ids": [
              "eni-09d4f516fa041a972"
            ],
            "owner_id": "789382984861",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01fc97a7482fded03"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0fe80742f52c3503f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd6877765d2dfdc4"
          },
          "dependencies": [
            "aws_route_table.capp-routetable",
            "aws_security_group.capp-security-group",
            "aws_subnet.capp-subnet",
            "aws_vpc.capp-vpc"
          ]
        }
      ]
    }
  ]
}